// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkControls render the BookmarkControls should render dirty 1`] = `
<ConnectStoresWrapper[BookmarkControls] stores=viewStoreState
  viewStoreState={
    Object {
      "activeQuery": "",
      "dirty": true,
      "view": Object {
        "created_at": undefined,
        "description": "description",
        "id": "id-beef",
        "owner": undefined,
        "properties": undefined,
        "search_id": "id-beef",
        "state": undefined,
        "summary": undefined,
        "title": "title",
        "type": undefined,
      },
    }
  }
>
  <BookmarkControls
    viewStoreState={
      Object {
        "activeQuery": "",
        "dirty": true,
        "view": Object {
          "created_at": undefined,
          "description": "description",
          "id": "id-beef",
          "owner": undefined,
          "properties": undefined,
          "search_id": "id-beef",
          "state": undefined,
          "summary": undefined,
          "title": "title",
          "type": undefined,
        },
      }
    }
  >
    <div
      className="position pull-right"
    >
      <ButtonGroup
        block={false}
        bsClass="btn-group"
        justified={false}
        vertical={false}
      >
        <div
          className="btn-group"
        >
          <Button
            active={false}
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
            title="Empty search"
          >
            <Button__StyledButton
              bsStyle="default"
              disabled={false}
              onClick={[Function]}
              title="Empty search"
            >
              <StyledComponent
                bsStyle="default"
                disabled={false}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="Empty search"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  disabled={false}
                  onClick={[Function]}
                  title="Empty search"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="Empty search"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Empty search"
                      type="button"
                    >
                      <i
                        className="fa fa-eraser"
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
          <Button
            active={false}
            bsStyle="default"
            innerRef={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            title="Unsaved changes"
          >
            <Button__StyledButton
              bsStyle="default"
              onClick={[Function]}
              title="Unsaved changes"
            >
              <StyledComponent
                bsStyle="default"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="Unsaved changes"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  onClick={[Function]}
                  title="Unsaved changes"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="Unsaved changes"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Unsaved changes"
                      type="button"
                    >
                      <i
                        className="fa fa-bookmark"
                        style={
                          Object {
                            "color": "#ffc107",
                          }
                        }
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
          <Button
            active={false}
            bsStyle="default"
            onClick={[Function]}
            title="List of saved searches"
          >
            <Button__StyledButton
              bsStyle="default"
              onClick={[Function]}
              title="List of saved searches"
            >
              <StyledComponent
                bsStyle="default"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="List of saved searches"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  onClick={[Function]}
                  title="List of saved searches"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="List of saved searches"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="List of saved searches"
                      type="button"
                    >
                      <i
                        className="fa fa-folder-o"
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
        </div>
      </ButtonGroup>
    </div>
  </BookmarkControls>
</ConnectStoresWrapper[BookmarkControls] stores=viewStoreState>
`;

exports[`BookmarkControls render the BookmarkControls should render not dirty 1`] = `
<ConnectStoresWrapper[BookmarkControls] stores=viewStoreState
  viewStoreState={
    Object {
      "activeQuery": "",
      "dirty": false,
      "view": Object {
        "created_at": undefined,
        "description": "description",
        "id": "id-beef",
        "owner": undefined,
        "properties": undefined,
        "search_id": "id-beef",
        "state": undefined,
        "summary": undefined,
        "title": "title",
        "type": undefined,
      },
    }
  }
>
  <BookmarkControls
    viewStoreState={
      Object {
        "activeQuery": "",
        "dirty": false,
        "view": Object {
          "created_at": undefined,
          "description": "description",
          "id": "id-beef",
          "owner": undefined,
          "properties": undefined,
          "search_id": "id-beef",
          "state": undefined,
          "summary": undefined,
          "title": "title",
          "type": undefined,
        },
      }
    }
  >
    <div
      className="position pull-right"
    >
      <ButtonGroup
        block={false}
        bsClass="btn-group"
        justified={false}
        vertical={false}
      >
        <div
          className="btn-group"
        >
          <Button
            active={false}
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
            title="Empty search"
          >
            <Button__StyledButton
              bsStyle="default"
              disabled={false}
              onClick={[Function]}
              title="Empty search"
            >
              <StyledComponent
                bsStyle="default"
                disabled={false}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="Empty search"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  disabled={false}
                  onClick={[Function]}
                  title="Empty search"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="Empty search"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Empty search"
                      type="button"
                    >
                      <i
                        className="fa fa-eraser"
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
          <Button
            active={false}
            bsStyle="default"
            innerRef={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            title="Saved search"
          >
            <Button__StyledButton
              bsStyle="default"
              onClick={[Function]}
              title="Saved search"
            >
              <StyledComponent
                bsStyle="default"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="Saved search"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  onClick={[Function]}
                  title="Saved search"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="Saved search"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Saved search"
                      type="button"
                    >
                      <i
                        className="fa fa-bookmark"
                        style={
                          Object {
                            "color": "#007bff",
                          }
                        }
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
          <Button
            active={false}
            bsStyle="default"
            onClick={[Function]}
            title="List of saved searches"
          >
            <Button__StyledButton
              bsStyle="default"
              onClick={[Function]}
              title="List of saved searches"
            >
              <StyledComponent
                bsStyle="default"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="List of saved searches"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  onClick={[Function]}
                  title="List of saved searches"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="List of saved searches"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="List of saved searches"
                      type="button"
                    >
                      <i
                        className="fa fa-folder-o"
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
        </div>
      </ButtonGroup>
    </div>
  </BookmarkControls>
</ConnectStoresWrapper[BookmarkControls] stores=viewStoreState>
`;

exports[`BookmarkControls render the BookmarkControls should render not dirty with unsaved view 1`] = `
<ConnectStoresWrapper[BookmarkControls] stores=viewStoreState
  viewStoreState={
    Object {
      "activeQuery": "",
      "dirty": false,
      "view": Object {
        "created_at": undefined,
        "description": "description",
        "id": undefined,
        "owner": undefined,
        "properties": undefined,
        "search_id": "id-beef",
        "state": undefined,
        "summary": undefined,
        "title": "title",
        "type": undefined,
      },
    }
  }
>
  <BookmarkControls
    viewStoreState={
      Object {
        "activeQuery": "",
        "dirty": false,
        "view": Object {
          "created_at": undefined,
          "description": "description",
          "id": undefined,
          "owner": undefined,
          "properties": undefined,
          "search_id": "id-beef",
          "state": undefined,
          "summary": undefined,
          "title": "title",
          "type": undefined,
        },
      }
    }
  >
    <div
      className="position pull-right"
    >
      <ButtonGroup
        block={false}
        bsClass="btn-group"
        justified={false}
        vertical={false}
      >
        <div
          className="btn-group"
        >
          <Button
            active={false}
            bsStyle="default"
            disabled={true}
            onClick={[Function]}
            title="Empty search"
          >
            <Button__StyledButton
              bsStyle="default"
              disabled={true}
              onClick={[Function]}
              title="Empty search"
            >
              <StyledComponent
                bsStyle="default"
                disabled={true}
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="Empty search"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  disabled={true}
                  onClick={[Function]}
                  title="Empty search"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={true}
                    onClick={[Function]}
                    title="Empty search"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={true}
                      onClick={[Function]}
                      title="Empty search"
                      type="button"
                    >
                      <i
                        className="fa fa-eraser"
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
          <Button
            active={false}
            bsStyle="default"
            innerRef={
              Object {
                "current": null,
              }
            }
            onClick={[Function]}
            title="Save search"
          >
            <Button__StyledButton
              bsStyle="default"
              onClick={[Function]}
              title="Save search"
            >
              <StyledComponent
                bsStyle="default"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="Save search"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  onClick={[Function]}
                  title="Save search"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="Save search"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Save search"
                      type="button"
                    >
                      <i
                        className="fa fa-bookmark-o"
                        style={
                          Object {
                            "color": "",
                          }
                        }
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
          <Button
            active={false}
            bsStyle="default"
            onClick={[Function]}
            title="List of saved searches"
          >
            <Button__StyledButton
              bsStyle="default"
              onClick={[Function]}
              title="List of saved searches"
            >
              <StyledComponent
                bsStyle="default"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "Button__StyledButton-c9cbmb-0",
                      "isStatic": false,
                      "lastClassName": "cBCVOY",
                      "rules": Array [
                        [Function],
                        ";",
                      ],
                    },
                    "displayName": "Button__StyledButton",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "Button__StyledButton-c9cbmb-0",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                onClick={[Function]}
                title="List of saved searches"
              >
                <Component
                  bsStyle="default"
                  className="Button__StyledButton-c9cbmb-0 cBCVOY"
                  onClick={[Function]}
                  title="List of saved searches"
                >
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="Button__StyledButton-c9cbmb-0 cBCVOY"
                    disabled={false}
                    onClick={[Function]}
                    title="List of saved searches"
                  >
                    <button
                      className="Button__StyledButton-c9cbmb-0 cBCVOY btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="List of saved searches"
                      type="button"
                    >
                      <i
                        className="fa fa-folder-o"
                      />
                    </button>
                  </Button>
                </Component>
              </StyledComponent>
            </Button__StyledButton>
          </Button>
        </div>
      </ButtonGroup>
    </div>
  </BookmarkControls>
</ConnectStoresWrapper[BookmarkControls] stores=viewStoreState>
`;
